client/Framework/themes/default/kd.tooltip.styl
@import "./client/Framework/themes/default/kdfn"

div.kdtooltip
  borderBox()
  abs()
  bg                          color, transparent
  top                         0
  left                        0
  width                       auto
  height                      auto
  min-width                   200px
  min-height                  50px
  overflow                    visible
  z-index                     9000
  vendor                      transition, opacity 0.1s ease-out

  &.animate-movement
    vendor                      transition, opacity 0.1s ease-out \, left 0.15s ease-in \, top 0.15s ease-in

  div.arrow
    abs()
    sprite()
    bg                        color, transparent
    z-index                   9002
    size                      15px 15px

  div.wrapper
    borderBox()
    rel()
    bg                        color, white
    vendor box-shadow,        0px 10px 20px 5px rgba(0,0,0,0.15)
    padding                   5px
    border                    1px solid rgba(0,0,0,0.275)
    width                     100%
    height                    100%
    min-height                50px
    min-width                 200px
    z-index                   9001

  &.placement-top
    div.arrow
      bg                      position, -220px -32px
      bottom                  -5px
    &.direction-right
      div.arrow
        left                  5px
    &.direction-left
      div.arrow
        right                 5px
    &.direction-center
      div.arrow
        margin-left           -8px
        left                  50%

  &.placement-bottom
    div.arrow
      bg                      position, -200px -31px
      top                     -14px
    &.direction-right
      div.arrow
        left                  5px
    &.direction-left
      div.arrow
        right                 5px
    &.direction-center
      div.arrow
        margin-left           -8px
        left                  50%

  &.placement-left
    div.arrow
      bg                      position, -200px -58px
      right                   -13px
    &.direction-top
      div.arrow
        bottom                5px
    &.direction-bottom
      div.arrow
        top                   5px
    &.direction-center
      div.arrow
        top                   50%
        margin-top            -8px

  &.placement-right
    div.arrow
      bg                      position, -220px -58px
      left                    -6px
    &.direction-top
      div.arrow
        bottom                5px
    &.direction-bottom
      div.arrow
        top                   5px
    &.direction-center
      div.arrow
        top                   50%
        margin-top            -8px

  &.out
    opacity                   0

  &.in
    opacity                   1

  &.just-text
    margin-left               3px
    min-height                5px
    min-width                 20px
    max-width                 300px
    bg                        color, transparent

    div.arrow
      bg                      color, transparent

    div.wrapper
      vendor box-shadow,      0 3px 7px rgba(0, 0, 0, 0.25)
      rounded                 3px
      bg                      color, rgba(0,0,0,0.85)
      min-height              5px
      min-width               20px

      border                  1px solid rgba(0,0,0,0.85)
      color                   white

      white-space             normal
      text-align              center
      hyphens                 auto
      direction               ltr
      text-rendering          optimizeLegibility

      font-size               12px
      font-weight             300

    &.placement-right
      div.arrow
        bg                    position, -185px -562px
        left                  -6px
      &.direction-center
        div.arrow
          top                 50%
          margin-top          -8px
    &.placement-left
      div.arrow
        bg                    position, -147px -562px
        right                 -26px
      &.direction-center
        div.arrow
          top                 50%
          margin-top          -8px
    &.placement-bottom
      div.arrow
        bg                    position, -162px -562px
        top                   -10px
      &.direction-left
        margin-left           10px
      &.direction-center
        div.arrow
          margin-left         0px
          left                50%
    &.placement-top
      div.arrow
        bg                    position, -122px -568px
        bottom                -13px
      &.direction-left
        margin-left           10px
      &.direction-center
        div.arrow
          margin-left         -6px
          left                50%

